ingress/ingress-jenkins.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: jenkins
  namespace: devops

spec:
  ingressClassName: nginx

  rules:
  - host: jenkins.local

    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: jenkins
            port:
              number: 8080
